[project]
name = "gmprocess"
version = "1.2.3"
description = "USGS Automated Ground Motion Processing Software"
authors = [
    {name = "Eric Thompson", email="emthompsone@usgs.gov"},
    {name = "Mike Hearne", email="mhearne@usgs.gov"},
    {name = "Brad Aagaard", email="baagaard@usgs.gov"},
    {name = "Bruce Worden", email="cbworden@contractor.usgs.gov"},
    {name = "John Rekoske", email="jrekoske@ucsd.edu"},
    {name = "Heather Hunsinger", email="hhunsinger@usgs.gov"},
    {name = "Gabe Ferragut", email="gferragut@usgs.gov"},
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.8,<3.11"

# Requirements:
dependencies = [
    "beautifulsoup4>=4.11",
    "configobj>=5.0.6",
    "esi-core>=1.0.1",
    "esi-utils-colors>1.0",
    "esi-utils-io>1.0",
    "esi-utils-rupture>1.0",
    "folium>=0.12",
    "h5py>=2.8",
    "lxml>=4.6.1",
    "matplotlib>=3.1.0",
    "numpy>=1.21",
    "obspy>=1.3.0",
    "openpyxl>=3.0.8",
    "pandas>=1.0",
    "ps2ff>=1.5.2",
    "pyasdf>=0.7",
    "requests>=2.23",
    "ruamel.yaml>=0.17.16",
    "schema>=0.7",
    "scipy>=1.7",
    "setuptools-scm>=6.3.2",
    "statsmodels>=0.12.2",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "build>=0.7.0",
    "black>=21",
    "flake8>=3.9",
    "ipython>=7.26",
]
test = [
    "pytest>=6.2",
    "pytest-cov>=2.12",
    "pytest-console-scripts>=1.2",
    "vcrpy>=4.1",
]
doc = [
    "sphinx>3.0.0",
    "requests>=2",
    "furo",
    "myst-nb",
    "myst-parser",
    "altair",
    "nbsphinx",
    "recommonmark",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
    "sphinxcontrib-programoutput",
]
build = [
    "build",
    "twine",
]

[project.scripts]
gmconvert = "gmprocess.bin.gmconvert:main"
gminfo = "gmprocess.bin.gminfo:main"
gmrecords = "gmprocess.bin.gmrecords:main"
gmworkspace = "gmprocess.bin.gmworkspace:main"
list_metrics = "gmprocess.bin.list_metrics:main"
cwb_gather = "gmprocess.bin.cwb_gather:main"

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gmprocess*"]
exclude = ["tests*"]
