[project]
name = "gmprocess"
dynamic = ["version"]
description = "USGS Automated Ground Motion Processing Software"
authors = [
    {name = "Eric Thompson", email="emthompsone@usgs.gov"},
    {name = "Mike Hearne", email="mhearne@usgs.gov"},
    {name = "Brad Aagaard", email="baagaard@usgs.gov"},
    {name = "Bruce Worden", email="cbworden@contractor.usgs.gov"},
    {name = "John Rekoske", email="jrekoske@ucsd.edu"},
    {name = "Heather Hunsinger", email="hhunsinger@usgs.gov"},
    {name = "Gabe Ferragut", email="gferragut@usgs.gov"},
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.9"

# Requirements:
dependencies = [
    "beautifulsoup4>=4.11.0",
    "configobj>=5.0.6",
    "esi-core>=1.0.1",
    "esi-utils-colors>1.0",
    "esi-utils-io>1.0",
    "esi-utils-rupture>1.0,<=1.0.4",
    "folium>=0.12",
    "gmpacket>=0.1.6",
    "h5py>=3.11",
    "lxml>=4.6.1",
    "matplotlib>=3.1.0",
    "numba>=0.58",
    "numpy>=1.21,<2.0",
    "obspy>=1.4.1",
    "openpyxl>=3.0.8",
    "openquake.engine>=3.18",
    "pandas>=1.0",
    "Pint>0.24.3",
    "ps2ff>=1.5.2",
    "pyasdf>=0.7",
    "pydantic>=2.0",
    "requests>=2.29",
    "ruamel.yaml>=0.17.16",
    "schema>=0.7",
    "scipy>=1.7",
    "setuptools-scm>=6.3.2",
    "statsmodels>=0.12.2",
    "tqdm>4.67",
    "usgs-strec>=2.3.2",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "build>=0.7.0",
    "black>=21",
    "esi-releases>=0.1",
    "flake8>=3.9",
    "ipython>=7.26",
    "pylint>=2.17",
]
test = [
    "pytest>=6.2",
    "pytest-cov>=2.12",
    "pytest-console-scripts>=1.4",
    "vcrpy>=4.1",
]
doc = [
    "altair>=4.2.2",
    "furo>=2023.3.27",
    "myst-nb>=0.17.2",
    "myst-parser>=0.18.1",
    "nbsphinx>=0.9.1",
    "recommonmark>=0.7.1",
    "sphinx>5.0.0",
    "sphinx-autoapi<3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinxcontrib-programoutput>=0.17",
]
build = [
    "build",
    "twine",
    "check-wheel-contents",
]


[project.scripts]
gmconvert = "gmprocess.bin.gmconvert:main"
gminfo = "gmprocess.bin.gminfo:cli"
gmrecords = "gmprocess.bin.gmrecords:main"
gmworkspace = "gmprocess.bin.gmworkspace:main"
gmprocess_config = "gmprocess.bin.gmprocess_config:main"
cwa_gather = "gmprocess.bin.cwa_gather:cli"
fix_inventory = "gmprocess.bin.fix_inventory:main"
fetch_orfeus = "gmprocess.bin.fetch_orfeus:cli"

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
  "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["gmprocess*"]
exclude = ["tests*"]

[tool.setuptools_scm]

